# nt_ass_2

./: Cargo.toml
src/: main.rs
