[package]
name = "nt_ass_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cryptography = { git = "https://github.com/a11e6s8vt/cryptography" }
cryptography = { path = "../cryptography" }
clap = { version = "4.4.6", features = ["derive", "cargo"] }
fmtastic = "0.1.0"
